# stochatreat

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.json  dev-environment.yml  dev-requirements.txt  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  stochatreat.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: CONTRIBUTING.md  build.yml  bump-and-release.yml  docs.yml  python-package.yml  release-and-publish.yml  release.yml  test.yml
docs/: api.md  changelog.md  index.md  usage.md
src/stochatreat/: __about__.py  __init__.py  misfit.py  preparation.py  stochatreat.py  treatment.py  utils.py
stochatreat/: __init__.py  stochatreat.py  treat_misfits.py  utils.py
tests/: test_assignment.py  test_import.py  test_io.py  test_misfit.py  test_preparation.py  test_stochatreat.py  test_stochatreat_assignment.py  test_stochatreat_input_output.py  test_stochatreat_io.py  test_treatment.py
