[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochatreat"
dynamic = ["version"]
description = 'Stratified random assignment using pandas'
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "randomization",
  "block randomization",
  "stratified randomization",
  "stratified random assignment",
  "strata",
]
authors = [{ name = "Manuel Martinez", email = "manmartgarc@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["pandas"]

[project.urls]
Documentation = "https://github.com/manmartgarc/stochatreat/blob/main/README.md"
Issues = "https://github.com/manmartgarc/stochatreat/issues"
Source = "https://github.com/manmartgarc/stochatreat/"

[tool.hatch.version]
path = "src/stochatreat/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "coverage[toml]>=6.5",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/stochatreat tests}"

[tool.coverage.run]
source_pkgs = ["stochatreat", "tests"]
branch = true
parallel = true
omit = [
  "src/stochatreat/__about__.py",
]

[tool.coverage.paths]
stochatreat = ["src/stochatreat", "*/stochatreat/src/stochatreat"]
tests = ["tests", "*/stochatreat/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHEKCING"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
  "TRY003"
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

