[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochatreat"
dynamic = ["version"]
description = 'Stratified random assignment using pandas'
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "randomization",
  "block randomization",
  "stratified randomization",
  "stratified random assignment",
  "strata",
]
authors = [{ name = "Manuel Martinez", email = "manmartgarc@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["pandas>=2.2"]

[project.urls]
Documentation = "https://github.com/manmartgarc/stochatreat/blob/main/README.md"
Issues = "https://github.com/manmartgarc/stochatreat/issues"
Source = "https://github.com/manmartgarc/stochatreat/"

[tool.hatch.version]
path = "src/stochatreat/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = ["pytest", "pytest-cov", "pytest-xdist", "coverage[toml]>=6.5"]
[tool.hatch.envs.default.scripts]
test-cov = "pytest --cov=src/stochatreat tests/ -n auto {args}"
test = "test-cov --no-cov"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive src/stochatreat tests/"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHEKCING",
  "__version__ = ",
]
show_missing = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["TRY003"]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.semantic_release]
commit_parser = "conventional"
version_variables = ["src/stochatreat/__about__.py:__version__"]
allow_zero_version = true
