[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochatreat"
dynamic = ["version"]
description = 'Stratified random assignment using pandas'
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "randomization",
  "block randomization",
  "stratified randomization",
  "stratified random assignment",
  "strata",
]
authors = [{ name = "Manuel Martinez", email = "manmartgarc@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["pandas>=2.2"]



[project.urls]
Documentation = "https://manmartgarc.github.io/stochatreat/"
Issues = "https://github.com/manmartgarc/stochatreat/issues"
Source = "https://github.com/manmartgarc/stochatreat/"

[tool.hatch.version]
path = "src/stochatreat/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = ["pytest", "pytest-cov", "pytest-xdist", "coverage[toml]>=6.5"]
[tool.hatch.envs.default.scripts]
test-cov = "pytest --cov -n auto {args}"
test = "test-cov --no-cov"

[tool.hatch.envs.docs]
installer = "uv"
dependencies = [
  "zensical",
  "mkdocstrings[python]>=0.25",
]
[tool.hatch.envs.docs.scripts]
build = "zensical build --clean --strict"
serve = "zensical serve"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = ["ty", "pytest"]
[tool.hatch.envs.types.scripts]
check = "ty check src/stochatreat tests/"

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING",
  "__version__ = ",
]
show_missing = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "D", "DOC"]
ignore = ["TRY003", "D203", "D213"]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "DOC", "S101"]


[tool.ruff.format]
docstring-code-format = true

[tool.semantic_release]
commit_parser = "conventional"
version_variables = ["src/stochatreat/__about__.py:__version__"]
allow_zero_version = true
